# gSMFRETda

./: .cuda-gdbinit  .gitattributes  .gitignore  .gitmodules  .vcpkg_deps.txt  ABOUT  CMakeLists.txt  Doxyfile  INSTALL.md  LICENSE  Makefile  README.md  TODO.md  USAGE.md  buildWin.bat  buildWinDebug.bat  conan_release_profile.txt  conanfile.posix  conanfile.txt
.github/: .codecov.yml
.github/workflows/: cache.yaml  choco.yml  cmake.yml  codeql-analysis.yml  cpu_test.yml  gpu_test.yml  gpu_text.yml  t1.yml  testci.yaml  windows.yml
cmake/: EvalGPUArchs.cmake  SetGPUArchs.cmake
data/: n25c.dat.hdf5
doc/: FAQ.md  USAGE.md  nanomsg.pptx  parameters.pptx  streamNumVsThroughput.xlsx
docker/: Dockerfile  dlfiles.sh  filelist.md5
docker/base/: Dockerfile  sources.list
gpuprofile/: nvvp.nvvp
protobuf/: args.proto
resources/: gSMFRETda.rc  gSMFRETda_icons512.xcf  icon.psd
scripts/: gitcommit-a  gitpull  quickBuildDebug.bat  quickBuildRel.bat  replaceGitURLwith.py  workFlowCtrl.py
serv_py/: msg.py  opt.py  pdaServ.py  t1.py
src/: binom.cuh  bitUbyte.hpp  call_main.cpp  cuList.cu  cuList.cuh  cuList.hpp  cuda_tools.hpp  eigenhelper.cpp  eigenhelper.hpp  gen_rand.cuh  gpuWorker.cpp  gpuWorker.hpp  loadHdf5.cpp  loadHdf5.hpp  main.cpp  mc.cu  mc.hpp  mrImp.cpp  mrImp.hpp  netWoker.cpp  netWorker.hpp  rmm.hpp  streamWorker.cpp  streamWorker.hpp  tools.cpp  tools.hpp
test/: checkhisthdf5.py  cv.cpp  cv1.cpp  pair.c  poco.cpp  reqrep.c  stdfill.cpp  stream.cu  vninfo.c
tests/: CMakeLists.txt  GenRandTest.cu  GenRandTest.hpp  ParamsTest.cpp  ParamsTest.hpp  gen_rand_tests.cpp  gen_rand_tests.cu  hist.cpp  hist.hpp  paraMatCheck.cpp
